--- a/citybike.html
+++ b/citybike.html
@@ -8,9 +8,9 @@
    
 
     <link rel="stylesheet" href="js/leaflet/leaflet.css"/>
-   
+  
    <script src="js/leaflet/leaflet.js"></script>
-
+   <script src="js/leaflet.hash/leaflet-hash.js" defer></script>
    <script src="citybikedata.js"></script>
    
    <script defer src="citybike.js"></script>
