--- a/citybike.html
+++ b/citybike.html
@@ -8,9 +8,12 @@
    
 
     <link rel="stylesheet" href="js/leaflet/leaflet.css"/>
-  
+  <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.css"/>
+  <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.Default.css"/>
    <script src="js/leaflet/leaflet.js"></script>
+   <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
    <script src="js/leaflet.hash/leaflet-hash.js" defer></script>
+   
    <script src="citybikedata.js"></script>
    
    <script defer src="citybike.js"></script>
