--- a/citybike.html
+++ b/citybike.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="js/leaflet/leaflet.css"/>
   <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.css"/>
   <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.Default.css"/>
+  <link rel="stylesheet" href="js/leaflet.search/leaflet-search.min.css"/>
    <script src="js/leaflet/leaflet.js"></script>
    <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
    <script src="js/leaflet.hash/leaflet-hash.js" defer></script>
-   
+   <script src="js/leaflet.search/leaflet-search.min.js" defer></script>
    <script src="citybikedata.js"></script>
    
    <script defer src="citybike.js"></script>
