--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -42,6 +42,8 @@
 
         <p>Auf dieser Etappe geht es größtenteils entlang des Talbodens, dennoch gilt es auf einer Länge von 42 Kilometern 850 Höhenmeter zu überwinden. Blickfang dieser Variante ist der klare Pillersee, der an heißen Tagen auch Erfrischung bietet.</p>
 
+<p>Tourdaten: Gesamtlänge <span id="laenge"></span>m</p>
+
         <div id="map"></div>
 
         <h2>Streckenbeschreibung</h2>
