pfad zu gpx als linie

--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -12,7 +12,7 @@
     <script src="../js/leaflet/leaflet.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="etappe12data.js"></script>
+    <script src="data/etappe12.geojson.js"></script>
     <script defer src="biketirol.js"></script>
 
 </head>
