--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../js/leaflet/leaflet.css" />
     <script src="../js/leaflet/leaflet.js"></script>
 
-    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/leaflet.fullscreen.css" />
-    <script src="../js/leaflet.fullscreen/dist/leaflet.fullscreen.js"></script>
+    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
+    <script src="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
 
     <script src="../js/leaflet.gpx/gpx.js"></script>
 
