Fullscreen link und script

--- a/wien_ogd/index.html
+++ b/wien_ogd/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="../js/leaflet/leaflet.css" />
     <script src="../js/leaflet/leaflet.js"></script>
     <script src="map_datasets.js"></script>
+
+    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
+    <script src="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
+
     <script defer src="map.js"></script>
 
 </head>
