--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -44,16 +44,16 @@
 
         <p>Auf dieser Etappe geht es größtenteils entlang des Talbodens, dennoch gilt es auf einer Länge von 42 Kilometern 850 Höhenmeter zu überwinden. Blickfang dieser Variante ist der klare Pillersee, der an heißen Tagen auch Erfrischung bietet.</p>
 
-        <p>Tourdaten: Gesamtlänge <span id="laenge"></span>m</p>
+        <p>Tourdaten: Länge <span id="laenge"></span>m,</p><p>tiefster Punkt <span id="tiefster_Punkt"></span>m,</p><p>höchster Punkt <span id="höchster_Punkt"></span>m,</p><p>Aufstieg <span id="Aufstieg"></span>m,</p><p>Abstieg <span id="Abstieg"></span>m.</p>
 
         <div id="map"></div>
 
         <h2>Streckenbeschreibung</h2>
-        <p>Man folgt dem Radweg zunächst durch Erpfendorf und in Folge leicht ansteigend bis nach Waidring (1h ab dem Etappenstart). Im Dorfzentrum zweigt man rechts auf die Straße nach St. Ulrich am Pillersee ab. Nach zwei Kilometern geht es rechts über eine kleine Brücke auf dem Radweg weiter, ehe man wieder die Straße überquert und auf einem Fahrweg zum Pillersee radelt. An den Radwegweisern orientiert man sich immer an „St. Ulrich“ und später „Hochfilzen“. Man durchquert die Beckenlandschaft und in südöstlicher Richtung geht es auf einer asphaltierten Straße Richtung Wiesental. Nach ca. einem Kilometer zweigt man links ab und fährt gleich wieder rechts parallel zur Straße auf einem Forstweg vorbei am Wiesensee in den Hochfilzener Weiler Warming (1,5h ab Waidring). Hier zweigt man zwischen den Bauernhöfen „Hörl“ und „Glaagut“ rechts auf die Radroute 17 „Buchensteinwandrunde“ ab. Dieser folgt man nun mehr als 10 Kilometer. Die Strecke führt oberhalb von Fieberbrunn vorbei wieder leicht ansteigend im Wald bis nach St.Jakob in Haus. Auf der Hauptstraße geht es links 100 Meter ab bis zur nächsten Abzweigung rechts auf die Radroute 18 „Kalksteinrunde“ Richtung St. Johann in Tirol auffährt. Den Radwegweisern folgt man nun bis zu den Häusern von Mühlbach auf halbem Weg zwischen Fieberbrunn und St.Johann (1,5h ab Warming). Hier endet die Route bei der Einmündung in die Etappe „Kössen-Kitzbühel“ kurz vor dem Anstieg auf das Kitzbüheler Horn.</p>
-
+        <p>Man folgt dem Radweg zunächst durch Erpfendorf u
         <h3>Links</h3>
         <ul>
-            <li>
+            <li>nd in Folge leicht ansteigend bis nach Waidring (1h ab dem Etappenstart). Im Dorfzentrum zweigt man rechts auf die Straße nach St. Ulrich am Pillersee ab. Nach zwei Kilometern geht es rechts über eine kleine Brücke auf dem Radweg weiter, ehe man wieder die Straße überquert und auf einem Fahrweg zum Pillersee radelt. An den Radwegweisern orientiert man sich immer an „St. Ulrich“ und später „Hochfilzen“. Man durchquert die Beckenlandschaft und in südöstlicher Richtung geht es auf einer asphaltierten Straße Richtung Wiesental. Nach ca. einem Kilometer zweigt man links ab und fährt gleich wieder rechts parallel zur Straße auf einem Forstweg vorbei am Wiesensee in den Hochfilzener Weiler Warming (1,5h ab Waidring). Hier zweigt man zwischen den Bauernhöfen „Hörl“ und „Glaagut“ rechts auf die Radroute 17 „Buchensteinwandrunde“ ab. Dieser folgt man nun mehr als 10 Kilometer. Die Strecke führt oberhalb von Fieberbrunn vorbei wieder leicht ansteigend im Wald bis nach St.Jakob in Haus. Auf der Hauptstraße geht es links 100 Meter ab bis zur nächsten Abzweigung rechts auf die Radroute 18 „Kalksteinrunde“ Richtung St. Johann in Tirol auffährt. Den Radwegweisern folgt man nun bis zu den Häusern von Mühlbach auf halbem Weg zwischen Fieberbrunn und St.Johann (1,5h ab Warming). Hier endet die Route bei der Einmündung in die Etappe „Kössen-Kitzbühel“ kurz vor dem Anstieg auf das Kitzbüheler Horn.</p>
+
                 <a href="https://www.tirol.at/reisefuehrer/sport/radfahren/biketouren/a-bike-trail-tirol-variante-pillersee">Biketrail Tirol - Variante Pillersee</a>
             </li>
             <li>
