tourdaten fett geschrieben

--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -44,7 +44,7 @@
 
         <p>Auf dieser Etappe geht es größtenteils entlang des Talbodens, dennoch gilt es auf einer Länge von 42 Kilometern 850 Höhenmeter zu überwinden. Blickfang dieser Variante ist der klare Pillersee, der an heißen Tagen auch Erfrischung bietet.</p>
 
-        <p>Tourdaten: Länge <span id="laenge"></span>m, tiefster Punkt <span id="tiefster_Punkt"></span>m, höchster Punkt <span id="hoechster_Punkt"></span>m, Aufstieg <span id="Aufstieg"></span>m, Abstieg <span id="Abstieg"></span>m.</p>
+        <p><strong>Tourdaten:</strong> Länge <span id="laenge"></span>m, tiefster Punkt <span id="tiefster_Punkt"></span>m, höchster Punkt <span id="hoechster_Punkt"></span>m, Aufstieg <span id="aufstieg"></span>m, Abstieg <span id="abstieg"></span>m.</p>
 
         <div id="map"></div>
 
