--- a/biketirol/index.html
+++ b/biketirol/index.html
@@ -17,6 +17,10 @@
     <script src="../js/leaflet.gpx/gpx.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
+
+    <script src="../js/d3/d3.v3.min.js"></script>
+    <link rel="stylesheet" href="../js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
+    <script type="text/javascript" src="../js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
    
     <script defer src="biketirol.js"></script>
 
